fix: 불변 리스트 반환에서 수정 가능한 리스트를 반환하도록 변경